update content in null.html

--- a/html/null.html
+++ b/html/null.html
@@ -270,7 +270,7 @@ null == true </pre><!-- code-content -->
                         <pre class="details-console-aclass small-view">
 false </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-fasle </pre><!-- wide-view -->
+false </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
@@ -280,7 +280,7 @@ fasle </pre><!-- wide-view -->
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-INSERT CODE THREE
+typeof null
   </pre><!-- code-content -->
                     </details><!--details CODE-->
 
@@ -292,11 +292,14 @@ INSERT CODE THREE
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT THREE (small view) 
-</pre><!-- small-view -->
+'object'</pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT THREE (wide view) 
-</pre><!-- wide-view -->
+'object' </pre><!-- wide-view -->
+                        <!--ususally inserted before details-console end tag-->
+                        <dl class="details-dl">
+                            <dt>Note</dt>
+                            <dd>The BIG mistake!</dd>
+                        </dl>
                     </details><!--details CONSOLE -->
 
                 </article>
