--- a/html/math_ceil.html
+++ b/html/math_ceil.html
@@ -84,6 +84,7 @@
                             It's the same value as <code>-Math.floor(-x)</code>
                     </ol>
                 </article>
+
                 <article>
                     <h1 class="count">Relationship</h1>
                     <pre class="details-code-aclass">
@@ -106,7 +107,8 @@ Math.ceil(-7.2) </pre><!-- code-content -->
                         <pre class="details-console-aclass small-view">
 -7</pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
--7</pre><!-- wide-view --> </details><!--details CONSOLE -->
+-7</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
                 </article>
 
                 <article>
